fixed Preview card style  on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -112,10 +112,22 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+.noscrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.noscrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
